Se configura nav y un poco del header del home

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -8,8 +8,8 @@
       <a> Imagen E </a>
     </div>
     <div class="nav-right">
-      <a> Divisa MXN </a>
-      <a> Imagen Sing </a>
+      <a class="divisas"> MXN </a>
+      <a class="login"> Imagen Sing </a>
     </div>
   </nav>
 </header>
