Se realizan grandes avances en css

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -4,9 +4,14 @@
   <article class="text-img">
     <p class="titulo-header">Iniciativas</p>
     <p class="texto-header">que se vuelven</p>
-    <p class="titulo-header">realidad.</p>
+    <p class="texto">realidad.</p>
 
     <button class="btn-header"> Ver más </button>
   </article>
 
 </section>
+
+
+<app-proyects></app-proyects>
+
+<app-footer></app-footer>
