--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -9,7 +9,11 @@
     </div>
     <div class="nav-right">
       <a class="divisas"> MXN </a>
-      <a class="login"> Imagen Sing </a>
+      <div class="dropdown-menu">
+        <a class="dropdown-item" href="#">MXN</a>
+        <a class="dropdown-item" href="#">USD</a>
+      </div>
+      <a class="login"> Imagen Sing In </a>
     </div>
   </nav>
 </header>
