--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -1,44 +1,53 @@
 @import "../../../styles";
 
-.header{
+.header {
   width: 100%;
-  border: 1px solid black;
   display: flex;
-  height: 400px;
   flex-direction: column;
   justify-content: center;
   align-items: flex-end;
-  background: darkseagreen;
+  max-height: 939px;
+  background: url("/assets/img/Imagen-Header.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  max-height: 550px;
+
 
   article {
-    //margin-right: 23em;
+
+    padding: 100px 150px;
     color: white;
     text-align: center;
-    p {
+
+
+
+    .titulo-header {
+      font-family: "Glober-Heavy";
+      font-size: $tamañoTitulosGrandes;
+    }
+
+    .texto-header {
       font-family: "Glober-Bold";
+      font-size: $tamañoTitulosMedianos;
     }
 
-    .titulo-header{
-      font-size: 50px;
+    .texto{
+      font-family: "Glober-Heavy";
+      font-size: $tamañoTitulosGrandes;
     }
-
-    .texto-header{
-      font-size: 30px;
-    }
-
     button {
-      padding: 15px 45px;
-      border-radius: 5px;
-      background: $colorVerde;
-      margin: 20px 0;
-      font-family: Glober-Bold;
+      padding: 15px 50px;
+      border-radius: 40px;
+      background: $colorBotonVerde;
+      font-family: "Glober-Black";
       font-size: 16px;
+      border: none;
       color: white;
-      .btn-header{
-
-      }
+      box-shadow: 5px 3px 3px black;
 
     }
   }
 
 }
+
