--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -5,11 +5,12 @@ header{
   background: #FFF;
   width: 100%;
   border-bottom: 1px solid gray;
-  font-family: "Glober-Book";
+  font-family: "Glober-Regular";
+  font-size: $tamañoTitulosPequeños;
 
   nav {
     width: 100%;
-    color: gray;
+    color: $colorTextoGris;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -25,7 +26,6 @@ header{
       a {
         text-align: center;
         border-bottom: 3px solid transparent;
-        font-size: 18px;
       }
       a:hover {
         border-bottom: 3px solid gray;
@@ -41,7 +41,6 @@ header{
       align-items: center;
       a {
         text-align: center;
-        font-size: 18px;
         width: 100%;
         padding: 10px 20px;
       }
@@ -56,10 +55,17 @@ header{
       align-items: center;
       a {
         text-align: center;
-        font-size: 18px;
         width: 100%;
         padding: 10px 20px;
-        color: $colorVerde;
+
+      }
+
+      .login{
+        color: $colorTextoVerde;
+      }
+
+      .dropdown-item{
+        display: none;
       }
     }
   }
