Se agrega log in y registro

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,4 +1,19 @@
 <footer>
-  <div class="eco-footer"></div>
-  <div class="copy-footer">&copy; Copyright EcoFin</div>
+
+  <div class="eco-footer">
+    <div class="footer-img">
+
+    </div>
+    <div class="footer-contacto">
+      <p>FAQ</p>
+      <p>Contacto</p>
+      <p>Políticas de Privacidad</p>
+    </div>
+    <div class="footer-redes">
+      <a class="twitter" href="#"><i class="fab fa-twitter"></i></a>
+      <a class="facebook" href="#"><i class="fab fa-facebook"></i></a>
+      <a class="instagram" href="#"><i class="fab fa-instagram"></i></a>
+    </div>
+  </div>
+  <div class="copy-footer">&copy; Copyright EcoFin Crowdfunding</div>
 </footer>
