--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -13,7 +13,7 @@
         <a class="dropdown-item" href="#">MXN</a>
         <a class="dropdown-item" href="#">USD</a>
       </div>
-      <a class="login"> Imagen Sing In </a>
+      <a [routerLink]="['/login']" class="login"> Sing In | Registro </a>
     </div>
   </nav>
 </header>
