--- a/src/styles.scss
+++ b/src/styles.scss
@@ -17,6 +17,7 @@ $tamañoTitulosGrandes: 40px;
 $tamañoTitulosMedianos: 30px;
 $tamañoTitulosPequeños: 20px;
 $tamañoTexto: 16px;
+$tamañoPequeño: 10px ;
 
 /*   FUENTES    */
 @font-face {
