--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -44,7 +44,7 @@
       font-size: 16px;
       border: none;
       color: white;
-      box-shadow: 5px 3px 3px black;
+      box-shadow: 9px 9px 18px 0px rgba(0,0,0,0.35);
 
     }
   }
