--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -4,6 +4,10 @@
     <input type="email" placeholder="email" id="email" name="email" required>
     <input type="password" placeholder="contraseña" id="password" name="password" required>
     <button class="btn-log">Iniciar</button>
-    <a href="" class="registrar"> O regístrarte</a>
+    <a class="registrar"> O regístrarte</a>
   </form>
+
 </section>
+
+<app-footer-transparent></app-footer-transparent>
+
