--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -1,9 +1,10 @@
 @import "../../../styles";
 
+
 section{
   width: 100%;
   height: 600px;
-  background: url("/assets/img/Imagen-Header.png");
+  background: url("/assets/img/login.jpg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
