--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,13 +1,15 @@
-<section class="log">
-  <form action="" method="post">
-    <h2>Inicia sesión</h2>
-    <input type="email" placeholder="email" id="email" name="email" required>
-    <input type="password" placeholder="contraseña" id="password" name="password" required>
-    <button class="btn-log">Iniciar</button>
-    <a class="registrar"> O regístrarte</a>
-  </form>
+<div class="login">
+  <section class="log">
+    <form action="" method="post">
+      <h2>Inicia sesión</h2>
+      <input type="email" placeholder="email" id="email" name="email" required>
+      <input type="password" placeholder="contraseña" id="password" name="password" required>
+      <button class="btn-log">Iniciar</button>
+      <a class="registrar"> O regístrarte</a>
+    </form>
 
-</section>
+  </section>
 
-<app-footer-transparent></app-footer-transparent>
+  <app-footer-transparent></app-footer-transparent>
+</div>
 
