--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -1,13 +1,16 @@
 @import "../../../styles";
 
-
-section{
+.login{
   width: 100%;
-  height: 600px;
   background: url("/assets/img/login.jpg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+}
+
+section{
+  width: 100%;
+  height: 600px;
   display: flex;
   flex-flow: column;
   justify-content: center;
