--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,17 +1,21 @@
 <app-navbar></app-navbar>
 
-<section class="header">
-  <article class="text-img">
-    <p class="titulo-header">Iniciativas</p>
-    <p class="texto-header">que se vuelven</p>
-    <p class="texto">realidad.</p>
+<div class="contenedor">
+  <section class="header">
+    <article class="text-img">
+      <p class="titulo-header">Iniciativas</p>
+      <p class="texto-header">que se vuelven</p>
+      <p class="texto">realidad.</p>
 
-    <button class="btn-header"> Ver más </button>
-  </article>
+      <button class="btn-header"> Ver más </button>
+    </article>
 
-</section>
+  </section>
 
 
-<!--<app-proyects></app-proyects>-->
+  <!--<app-proyects></app-proyects>-->
+
+
+</div>
 
 <app-footer></app-footer>
