--- a/src/app/components/footer-transparent/footer-transparent.component.html
+++ b/src/app/components/footer-transparent/footer-transparent.component.html
@@ -2,7 +2,7 @@
 
   <div class="eco-footer">
     <div class="footer-img">
-
+      <a routerLink="/home"><img src="./assets/ico/icono-footer.png" lang="icono Ecofin" /></a>
     </div>
     <div class="footer-contacto">
       <p>FAQ</p>
