--- a/src/app/components/footer-transparent/footer-transparent.component.scss
+++ b/src/app/components/footer-transparent/footer-transparent.component.scss
@@ -18,6 +18,14 @@ footer{
 
     .footer-img{
       width: 100%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      img{
+        order: 1;
+        width: 90px;
+      }
     }
 
     .footer-contacto {
