--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,8 +1,7 @@
 <footer>
-
   <div class="eco-footer">
     <div class="footer-img">
-
+      <a routerLink="/home"><img src="./assets/ico/icono-footer.png" lang="icono Ecofin" /></a>
     </div>
     <div class="footer-contacto">
       <p>FAQ</p>
