--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -2,10 +2,11 @@
   <nav>
     <div class="nav-left">
       <a> Proyectos </a>
-      <a> Nosotros </a>
+      <a *ngIf="!usuario.token"> Nosotros </a>
+      <a *ngIf="usuario.token"  [routerLink]="['/new-proyect']" > Nuevo Proyecto </a>
     </div>
     <div class="nav-center">
-      <a> Imagen E </a>
+      <a [routerLink]="['/home']"> <img src="./assets/ico/icono-header.png"> </a>
     </div>
     <div class="nav-right">
       <a class="divisas"> MXN </a>
@@ -13,7 +14,8 @@
         <a class="dropdown-item" href="#">MXN</a>
         <a class="dropdown-item" href="#">USD</a>
       </div>
-      <a [routerLink]="['/login']" class="login"> Sing In | Registro </a>
+      <a *ngIf="!usuario.token" [routerLink]="['/login']" class="login"> <img src="./assets/ico/icono-login.png"> Sing In | Registro </a>
+      <a *ngIf="usuario.token" (click)="logout()" class="login"> {{ this.usuario.nombre }}</a>
     </div>
   </nav>
 </header>
