--- a/src/app/components/new-proyect/new-proyect.component.scss
+++ b/src/app/components/new-proyect/new-proyect.component.scss
@@ -1,27 +1,28 @@
 @import "../../../styles";
 
-.login{
+.new-proyect{
   width: 100%;
-  background: url("/assets/img/login.jpg");
+  background: url("/assets/img/new-proyect.jpg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
 }
 
-section{
+section {
   width: 100%;
   height: 600px;
   display: flex;
   flex-flow: column;
   justify-content: center;
   align-items: center;
+
   form{
     display: flex;
     flex-flow: column;
     align-items: center;
     background: white;
-    width: 30%;
-    height: 450px;
+    width: 50%;
+    min-height: 450px;
     border-radius: 30px;
     padding: 30px;
 
@@ -29,6 +30,14 @@ section{
       font-family: "Glober-Heavy";
       font-size: $tamañoTitulosGrandes;
       margin-bottom: 30px;
+    }
+
+    textarea{
+      background: $colorFondoProyect;
+      max-height: 40px;
+      max-width: 60%;
+      min-width: 60%;
+      border-radius: 20px 20px 0 0;
     }
 
     input {
@@ -44,25 +53,35 @@ section{
       border: 0.6px solid $colorBotonVerde;
     }
 
-    button {
-      padding: 15px 50px;
-      border-radius: 40px;
-      background: $colorBotonVerde;
-      cursor: pointer;
-      font-family: "Glober-Black";
-      font-size: 16px;
-      border: none;
-      color: white;
-      box-shadow: 9px 9px 18px 0px rgba(0,0,0,0.35);
-      margin-bottom: 30px;
+    .btns{
+      width: 50%;
+      display: flex;
+      justify-content: space-around;
+      align-items: center;
+
+      button {
+        padding: 15px 50px;
+        cursor: pointer;
+        font-family: "Glober-Black";
+        font-size: 16px;
+        border: none;
+
+
+        margin-bottom: 30px;
+
+
+      }
+
+      .btn-proy{
+        box-shadow: 9px 9px 18px 0px rgba(0,0,0,0.35);
+        border-radius: 40px;
+        color: white;
+        background: $colorBotonVerde;
+      }
+
     }
 
-    a {
-      text-decoration: none;
-      color: $colorTextoVerde;
-      font-family: "Glober-Regular";
-      font-size: $tamañoTexto;
-    }
+
 
   }
 }
