--- a/src/app/components/new-proyect/new-proyect.component.scss
+++ b/src/app/components/new-proyect/new-proyect.component.scss
@@ -32,12 +32,20 @@ section {
       margin-bottom: 30px;
     }
 
-    textarea{
+    p{
+      padding: 10px 0;
       background: $colorFondoProyect;
-      max-height: 40px;
+      color: $colorTextoGris;
+      text-align: center;
+      min-height: 60px;
+      max-height: 60px;
       max-width: 60%;
       min-width: 60%;
       border-radius: 20px 20px 0 0;
+    }
+
+    .file-over{
+      border: solid 1px $colorBotonVerde;
     }
 
     input {
