--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -6,7 +6,7 @@
       <a *ngIf="usuario.token"  [routerLink]="['/new-proyect']" > Nuevo Proyecto </a>
     </div>
     <div class="nav-center">
-      <a [routerLink]="['/home']"> <img src="./assets/ico/icono-header.png"> </a>
+      <a [routerLink]="['/user']"> <img src="./assets/ico/icono-header.png"> </a>
     </div>
     <div class="nav-right">
       <a class="divisas"> MXN </a>
