--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,6 +12,8 @@ $colorFondoVerde: #00CC5E;
 $colorFondoObscuro: #1E1E1E;
 $colorFondoNegro: #000000;
 $colorFondoProyect: #F7F7F7;
+$colorTextoMeta: #4D4D4D;
+$colorFondoGris: #F2F2F2;
 
 $tamañoTitulosGrandes: 40px;
 $tamañoTitulosMedianos: 30px;
