--- a/src/app/components/home-user/home-user.component.html
+++ b/src/app/components/home-user/home-user.component.html
@@ -1,27 +1,3 @@
 <app-navbar></app-navbar>
 
-
-<div class="contenedor">
-  <table>
-    <thead>
-    <tr>
-      <th scope="col">Nombre</th>
-      <th scope="col">Descripcion</th>
-      <th scope="col">Categoria</th>
-      <th scope="col">Valor</th>
-      <th scope="col">Editar</th>
-      <th scope="col">Eliminar</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr *ngFor="let proyect of proyects">
-      <td> {{ proyect.nombre }} </td>
-      <td> {{ proyect.descripcion }} </td>
-      <td> {{ proyect.categoria }} </td>
-      <td> {{ proyect.valorProyecto }} </td>
-      <td> <button class="btn-log" type="submit"> Editar</button> </td>
-      <td> <button class="btn-log" type="submit"> Eliminar </button> </td>
-    </tr>
-    </tbody>
-  </table>
-</div>
+<app-proyects></app-proyects>
