--- a/src/app/components/home-user/home-user.component.scss
+++ b/src/app/components/home-user/home-user.component.scss
@@ -2,39 +2,9 @@
 
 .contenedor{
   width: 100%;
-  margin: 30px auto;
+  margin: 30px 0;
   display: flex;
-  justify-content: center;
-  align-items: center;
-
-  table{
-    width: 60%;
-    text-align: center;
-    margin: 5px 10px;
-    font-family: "Glober-Book";
-     th{
-       font-family: "Glober-Heavy";
-       border-bottom: 1px solid $colorTextoGris;
-       padding: 20px 10px;
-     }
-    td{
-      border-bottom: 1px solid $colorTextoGris;
-      padding: 20px 10px;
-
-      button {
-        padding: 10px 30px;
-        border-radius: 40px;
-        background: $colorBotonVerde;
-        cursor: pointer;
-        font-family: "Glober-Regular";
-        font-size: 10px;
-        border: none;
-        color: white;
-        //box-shadow: 9px 9px 18px 0px rgba(0,0,0,0.35);
-        margin-bottom: 30px;
-      }
-    }
-
-  }
+  justify-content: flex-start;
+  align-items: flex-start;
 
 }
